--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -133,11 +133,8 @@
 <template name="i_inScan">
   <view class="weui-search-bar">
     <view class="weui-search-bar__label">{{p}}</view>
-    <form class="weui-search-bar__form" bindsubmit="i_inScan">
-      <inputclass="weui-search-bar__input" name="{{gname}}" value="{{c}}" />
-      <button class="weui-search-bar__cancel-btn" type="primary" size="mini" id="sc-{{n}}" bindtap="i_inScan">扫码</button>
-      <button class="weui-search-bar__cancel-btn" type="primary" size="mini" formType="submit" id="su-{{n}}">确定</button>
-    </form>
+    <input class="weui-search-bar__input" name="{{gname}}" value="{{c}}" id="si-{{n}}" bindinput="i_inScan" />
+    <button class="weui-search-bar__cancel-btn" type="primary" size="mini" id="sc-{{n}}" bindtap="i_inScan">扫码</button>
   </view>
 </template>
 
@@ -351,6 +348,31 @@
   </view>
 </template>
 
+<template name="s_arrList">
+  <view class="weui-cell">
+    <view class="weui-cell__bd">{{p}}:</view>
+    <view class="weui-cell__ft">
+      <view wx:for="{{c}}" wx:key="{{index}}">{{ item }}{{wewxs.mDot(index,c)}}</view>
+    </view>
+  </view>
+</template>
+
+<template name="i_arrList">
+  <view class="weui-cell">
+    <view class="weui-cell__hd">{{p}}:</view>
+    <view class="weui-cell__bd">
+      <view wx:for="{{c}}" wx:key="{{index}}">
+        <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="i_arrList">{{ item }}{{wewxs.mDot(index,c)}}</view>
+      </view>
+    </view>
+    <view class="weui-cell__ft" id="se-{{n}}" bindtap="i_arrList"><image class="weui-media-box__thumb" src="/images/jian.png" background-size="cover"/></view>
+  </view>
+  <view wx:if="{{fieldSelect==n}}" class="weui-cell">
+    <input class="weui-cell__bd" id="ai-{{n}}" bindinput="i_arrList"/>
+    <view class="weui-cell__ft"><icon id="su-{{n}}" data-ivalue="{{arrValue}}" bindtap="i_arrList" type="success" size="32"/></view>
+  </view>
+</template>
+
 <template name="s_industrytype">
   <view class="weui-cell">
     <view class="weui-cell__bd">{{p}}:</view>
@@ -464,27 +486,27 @@
   </view>
 </template>
 
-<template name="s_sProcedure">
+<template name="s_sCargo">
   <view class="weui-cell">
     <view class="weui-cell__bd">{{p}}:</view>
     <view class="weui-cell__ft">{{ ad[c].uName }}</view>
   </view>
 </template>
 
-<template name="i_sProcedure">
+<template name="i_sCargo">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{ad[c ? c : mD[provalue[0]][provalue[1]] ]}} </view>
+    <view class="weui-cell__bd">{{ad[c ? c : cargoObject[provalue[0]][provalue[1]] ]}} </view>
     <view hidden="true"><input name="{{gname}}" value="{{c ? c : mD[provalue[0]][provalue[1]]}}" /></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="i_sProcedure" type="search" size="32"/>
+    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="i_sCargo" type="search" size="32"/>
   </view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{provalue}}" bindchange="i_sProcedure">
+    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{provalue}}" bindchange="i_sCargo">
       <picker-view-column>
-          <view wx:for="{{['产品','服务']}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
+          <view wx:for="{{proSelCargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.product}}</view>
       </picker-view-column>
       <picker-view-column>
-          <view wx:for="{{mD[provalue[0]]}}" wx:key="{{index}}" style="line-height: 36rpx">{{ad[item]}}</view>
+          <view wx:for="{{proSelCargo[provalue[0]].cargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{cargoObject[item]}}</view>
       </picker-view-column>
     </picker-view>
   </view>
