--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -1,32 +1,5 @@
 <import src="wedetail.wxml" />
-<wxs src="apdv.wxs" module="apdv" />
-<wxs src="apdc.wxs" module="apdclist" />
-<wxs src="assv.wxs" module="assv" />
-<wxs src="assc.wxs" module="assclist" />
 <wxs src="weimport.wxs" module="wewxs" />
-
-<template name="tabBar">
-  <view wx:if="{{isWorker}}" class="weui-footer_fixed-bottom weui-tabbars">
-    <block wx:for="{{tabBar}}" wx:key="{{index}}" wx:for-item="tb">
-      <view wx:if="{{pName==tb.pName}}" class="weui-tabbar__item">
-        <image class="weui-tabbar__icon" src="../../images/{{tb.pName}}.png"/>
-        <view wx:if="{{tb.sams>0}}">
-          <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">{{tb.sams}}</span>
-        </view>
-        <view class="weui-tabbar__label" style="color:green;">{{tb.cName}}</view>
-      </view>
-      <view wx:else class="weui-tabbar">
-        <navigator url="/pages/{{tb.pName}}/{{tb.pName}}" open-type="redirectTo" hover-class="other-navigator-hover">
-          <image class="weui-tabbar__icon" src="../../images/{{tb.pName}}.png"/>
-          <view wx:if="{{tb.sams>0}}">
-            <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">{{tb.sams}}</span>
-          </view>
-          <view class="weui-tabbar__label">{{tb.cName}}</view>
-        </navigator>
-      </view>
-    </block>
-  </view>
-</template>
 
 <template name="s_p">
   <view class="weui-cells__title">{{p}}:</view>
@@ -37,26 +10,9 @@
   </view>
 </template>
 
-<template name="i_p">
-  <view class="weui-cells__title">{{p}}</view>
-  <view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell">
-      <view class="weui-cell__bd">
-        <textarea class="weui-textarea" name="{{gname}}" value="{{c}}" placeholder="请输入{{p}}" />
-      </view>
-    </view>
-  </view>
-</template>
-
 <template name="s_ap">
   <view class="weui-article__p">
     <text>{{c}}</text>
-  </view>
-</template>
-
-<template name="i_ap">
-  <view class="weui-article__p">
-    <textarea class="weui-textarea" name="{{gname}}" value="{{c}}" placeholder="请输入{{p}}" />
   </view>
 </template>
 
@@ -70,57 +26,6 @@
   </swiper>
 </template>
 
-<template name="i_pics">
-  <view id="ac-{{n}}" bindtap="i_pics">
-    <view class="swtext">{{p}}:</view>
-    <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
-      <block wx:for="{{c ? c : ['https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/790f500d14e467fe28e3.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/ff933806fce411614341.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/c4b4edf57363e801162c.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/4827cf0d996f80a86266.JPG','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/d5140a5a494b03139854.jpg','https://e3sl2viw1q4ta7me-10007535.file.myqcloud.com/42e17b8efd6a01896496.JPG'] }}" wx:key="{{index}}">
-        <swiper-item>
-          <image src="{{item}}" class="swimage"></image>
-        </swiper-item>
-      </block>
-    </swiper>
-  </view>
-</template>
-
-<template name="i_insdata">
-  <view class="weui-footer_fixed-bottom weui-grids">
-    <block wx:for="{{wewxs.mgrids}}" wx:key="{{index}}">
-      <view class="weui-grid" id="{{wewxs.mid[index]}}" hover-class="weui-grid_active" bindtap="i_insdata">
-        <image class="weui-grid__icon" src="../../images/{{index+1}}.png"></image>
-        <view class="weui-grid__label">{{item}}</view>
-      </view>
-    </block>
-  </view>
-</template>
-
-<template name="s_Name">
-  <view class="weui-cells">
-    <view class="weui-cell__hd">
-      <view class="weui-label">{{p}}:</view>
-    </view>
-    <view class="weui-cell__bd">{{c}}</view>
-  </view>
-</template>
-
-<template name="i_Name">
-  <view class="weui-cells weui-cells_after-title">
-    <form bindsubmit="i_Name">
-    <view class="weui-cell weui-cell_input weui-cell_vcode">
-      <view class="weui-cell__hd">
-        <view class="weui-label">{{p}}:</view>
-      </view>
-      <view class="weui-cell__bd">
-        <input name="{{gname}}" value="{{c}}" class="weui-input" placeholder="请点击此处输入{{p}}" />
-      </view>
-      <view class="weui-cell__ft">
-        <button class="weui-vcode-btn" formType="submit">保   存</button>
-      </view>
-    </view>
-    </form>
-  </view>
-</template>
-
 <template name="s_inScan">
   <view class="weui-search-bar">
     <view class="weui-cell__hd">
@@ -130,63 +35,22 @@
   </view>
 </template>
 
-<template name="i_inScan">
-  <view class="weui-search-bar">
-    <view class="weui-search-bar__label">{{p}}</view>
-    <input class="weui-search-bar__input" name="{{gname}}" value="{{c}}" id="si-{{n}}" bindinput="i_inScan" />
-    <button class="weui-search-bar__cancel-btn" type="primary" size="mini" id="sc-{{n}}" bindtap="i_inScan">扫码</button>
-  </view>
-</template>
-
 <template name="s_arrsel">
   <view class="weui-cell">{{p}}: {{alist[c]}}</view>
-</template>
-
-<template name="i_arrsel">
-  <picker id="ac-{{n}}" mode="selector" value="{{c}}" range="{{alist}}" bindchange="i_arrsel">
-  <view  class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd" id="ds-{{n}}">{{alist[c]}}</view>
-  </view>
-  </picker>
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
 </template>
 
 <template name="s_h1">
   <view class="weui-article__h1">{{c}}</view>
 </template>
 
-<template name="i_h1">
-  <view class="weui-article__h1">
-    <input name="{{gname}}" value="{{c}}" class="weui-input" placeholder="请输入{{p}}" />
-  </view>
-</template>
-
 <template name="s_h2">
   <view class="weui-article__h2">{{c}}</view>
-</template>
-
-<template name="i_h2">
-  <view class="weui-article__h2">
-    <input name="{{gname}}" value="{{c}}" class="weui-input" placeholder="请输入大标题" />
-  </view>
 </template>
 
 <template name="s_h3">
   <view class="weui-cell">
     <view class="weui-cell__bd">{{p}}:</view>
     <view class="weui-cell__ft">{{c}}</view>
-  </view>
-</template>
-
-<template name="i_h3">
-  <view class="weui-cell weui-cell_input">
-    <view class="weui-cell__hd">
-        <view class="weui-label">{{p}}:</view>
-    </view>
-    <view class="weui-cell__bd">
-      <input name="{{gname}}" value="{{c}}" class="weui-input" placeholder="请输入{{p}}" />
-    </view>
   </view>
 </template>
 
@@ -197,44 +61,10 @@
   </view>
 </template>
 
-<template name="i_h4">
-  <view class="weui-cell weui-cell_input" style="font-size: 24rpx;">
-    <view class="weui-cell__hd">
-      <view class="weui-label">{{p}}:</view>
-    </view>
-    <view class="weui-cell__bd">
-      <input name="{{gname}}" value="{{c}}" class="weui-input" placeholder="请输入{{p}}" />
-    </view>
-  </view>
-</template>
-
 <template name="s_dg">
   <view class="weui-cell">
     <view class="weui-cell__bd">{{p}}:</view>
     <view class="weui-cell__ft">{{c}}</view>
-  </view>
-</template>
-
-<template name="i_dg">
-  <view class="weui-cell weui-cell_input">
-    <view class="weui-cell__hd">
-      <view class="weui-label">{{p}}:</view>
-    </view>
-    <view class="weui-cell__bd">
-      <input id="dg-{{n}}" name="{{gname}}" value="{{c}}" class="weui-input" type="digit" bindinput="f_{{f}}"/>
-    </view>
-  </view>
-</template>
-
-<template name="i_fg">
-  <view class="weui-cell weui-cell_input">
-    <view class="weui-cell__hd">
-        <view class="weui-label">{{p}}:</view>
-    </view>
-    <view class="weui-cell__bd">
-      <view>{{c}}</view>
-      <input hidden="{{true}}" name="{{gname}}" value="{{c}}"/>
-    </view>
   </view>
 </template>
 
@@ -250,31 +80,11 @@
   <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
 </template>
 
-<template name="i_chooseAd">
-  <view id="ac-{{n}}" bindtap="i_chooseAd">
-  <view class="weui-label">{{p}}:</view>
-    <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
-  </view>
-</template>
-
 <template name="s_ed">
   <view class="weui-cell__hd">
     <view class="weui-label">{{p}}:</view>
   </view>
   <view class="weui-cell__bd">{{c}}</view>
-</template>
-
-<template name="i_ed">
-  <view class="weui-cell weui-cell_input">
-    <navigator url="/util/addressedit/addressedit?reqName={{gname}}">
-      <view class="weui-cell__hd">
-        <view class="weui-label">{{p}}(点此选择)</view>
-      </view>
-    </navigator>
-    <view class="weui-cell__bd">
-      <input disabled="true" name="{{gname}}" value="{{c}}" placeholder="请输入{{p}}"/>
-    </view>
-  </view>
 </template>
 
 <template name="s_eDetail">
@@ -290,36 +100,9 @@
   </view>
 </template>
 
-<template name="i_eDetail">
-  <view class="weui-article">
-    <block wx:for="{{c}}" wx:key="{{index}}">
-      <view style="background-color:{{selectd==index ? '#999999' : '#F8F8F8'}};" class="weui-article__{{item.t}}" id="ad-{{index}}" catchlongpress="i_eDetail">
-        <view wx:if="{{item.t<0}}">
-          <template is="{{item.t}}" data="{{...item}}"></template>
-          <input hidden="true" name="adc{{index}}" value="{{item.c}}"/>
-        </view>
-        <view wx:if="{{item.t=='p'}}">
-            <textarea id="txid-{{index}}" name="ade{{index}}" auto-height="true" maxlength="-1" value="{{item.e}}" placeholder="点击此处输入正文"/>
-        </view>
-        <view wx:else>
-          <input id="txid-{{index}}" name="ade{{index}}" style="text-indent:2em;" value="{{item.e}}" placeholder="点击此处编辑"/>
-        </view>
-      </view>
-    </block>
-  </view>
-</template>
-
 <template name="s_pic">
   <view class="weui-article__-2">{{p}}:</view>
   <image src="{{c}}" style="width: 100%;" mode="aspectFit"></image>
-</template>
-
-<template name="i_pic">
-  <view class="weui-article__-2" id="ac-{{n}}" bindtap="i_pic">
-    <view>{{p}}:</view>
-    <image src="{{c ? c :e}}" style="width: 100%;" mode="aspectFit"></image>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  </view>
 </template>
 
 <template name="s_thumb">
@@ -327,25 +110,9 @@
   <image src="{{c}}" style="width: 100%;" mode="aspectFit"></image>
 </template>
 
-<template name="i_thumb">
-  <view class="weui-article__-2" id="ac-{{n}}" bindtap="i_thumb">
-    <view hidden="{{c}}">{{p}}:</view>
-    <image src="{{c ? c : '/images/2.png'}}" style="width: 100%;" mode="aspectFit"></image>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  </view>
-</template>
-
 <template name="s_vidio">
   <view class="weui-article__-4">{{p}}:</view>
   <video src="{{c}}" controls></video>
-</template>
-
-<template name="i_vidio">
-  <view class="weui-article__-4">
-    <view id="ac-{{n}}" bindtap="i_vidio">{{p}}(点此处更换视频)</view>
-    <video src="{{c ? c : 'http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400'}}" controls></video>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  </view>
 </template>
 
 <template name="s_arrList">
@@ -354,22 +121,6 @@
     <view class="weui-cell__ft">
       <view wx:for="{{c}}" wx:key="{{index}}">{{ item }}{{wewxs.mDot(index,c)}}</view>
     </view>
-  </view>
-</template>
-
-<template name="i_arrList">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">
-      <view wx:for="{{c}}" wx:key="{{index}}">
-        <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="i_arrList">{{ item }}{{wewxs.mDot(index,c)}}</view>
-      </view>
-    </view>
-    <view class="weui-cell__ft" id="se-{{n}}" bindtap="i_arrList"><image class="weui-media-box__thumb" src="/images/jian.png" background-size="cover"/></view>
-  </view>
-  <view wx:if="{{fieldSelect==n}}" class="weui-cell">
-    <input class="weui-cell__bd" id="ai-{{n}}" bindinput="i_arrList"/>
-    <view class="weui-cell__ft"><icon id="su-{{n}}" data-ivalue="{{arrValue}}" bindtap="i_arrList" type="success" size="32"/></view>
   </view>
 </template>
 
@@ -382,61 +133,10 @@
   </view>
 </template>
 
-<template name="i_industrytype">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">
-      <view wx:for="{{c}}" wx:key="{{index}}">
-        <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="i_industrytype">{{ apdv['s'+item] }}{{wewxs.mDot(index,c)}}</view>
-      </view>
-    </view>
-    <view class="weui-cell__ft"><icon id="se-{{n}}" bindtap="i_industrytype" type="download" size="32"/></view>
-  </view>
-  <view hidden="{{inclose}}">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">{{apdv['s'+ apdclist[apdvalue[0]].st[apdvalue[1]].ct[apdvalue[2]]] }}</view>
-    <view class="weui-cell__ft"><icon id="su-{{n}}" data-sapdv="{{apdclist[apdvalue[0]].st[apdvalue[1]].ct[apdvalue[2]]}}" bindtap="i_industrytype" type="success" size="32"/></view>
-  </view>
-    <picker-view  id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{apdvalue}}" bindchange="i_industrytype">
-        <picker-view-column>
-            <view wx:for="{{apdclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{apdclist[apdvalue[0]].st}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{apdclist[apdvalue[0]].st[apdvalue[1]].ct}}" wx:key="{{index}}" style="line-height: 36rpx">{{apdv['s'+item]}}</view>
-        </picker-view-column>
-    </picker-view>
-  </view>
-</template>
-
 <template name="s_producttype">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
     <view class="weui-cell__ft">{{ apdv['s'+c] }} </view>
-  </view>
-</template>
-
-<template name="i_producttype">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{ apdv['s'+ (c ? c : wewxs.glist(indlist,pdva,2))] }}</view>
-    <view hidden="true"><input name="{{gname}}" value="{{c ? c : wewxs.glist(indlist,pdva,2)}}"/></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="i_producttype" type="download" size="32"/>
-  </view>
-  <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{pdva}}" bindchange="i_producttype">
-        <picker-view-column>
-            <view wx:for="{{indlist}}" wx:key="{{index}}" style="line-height: 36rpx">{{apdv['s'+item]}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{wewxs.glist(indlist,pdva,0)}}" wx:key="{{index}}" style="line-height: 36rpx">{{apdv['s'+item]}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{wewxs.glist(indlist,pdva,1)}}" wx:key="{{index}}" style="line-height: 36rpx">{{apdv['s'+item]}}</view>
-        </picker-view-column>
-    </picker-view>
   </view>
 </template>
 
@@ -447,42 +147,10 @@
   </view>
 </template>
 
-<template name="i_assettype">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{assv['a'+ c ? c : assclist[ascvalue[0]].st[ascvalue[1]].ct[ascvalue[2]] ]}} </view>
-    <view hidden="true"><input name="{{gname}}" value="{{c ? c : assclist[ascvalue[0]].st[ascvalue[1]].ct[ascvalue[2]]}}" /></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="i_assettype" type="download" size="32"/>
-  </view>
-  <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{ascvalue}}" bindchange="i_assettype">
-      <picker-view-column>
-          <view wx:for="{{assclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-      </picker-view-column>
-      <picker-view-column>
-          <view wx:for="{{assclist[ascvalue[0]].st}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-      </picker-view-column>
-      <picker-view-column>
-          <view wx:for="{{assclist[ascvalue[0]].st[ascvalue[1]].ct}}" wx:key="{{index}}" style="line-height: 36rpx">{{assv['a'+item]}}</view>
-      </picker-view-column>
-    </picker-view>
-  </view>
-</template>
-
 <template name="s_sedate">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
     <view class="weui-cell__bd">自{{c[0]}}到{{c[1]}}</view>
-  </view>
-</template>
-
-<template name="i_sedate">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <picker mode="date" id="ac-{{n}}" data-ei="{{endif}}" value="{{endif ? c[1] : c[0]}}" start="{{c[0]}}" end="2999-09-01" bindchange="i_sedate">
-      <view style='display: inline-block;' class="weui-cell__bd" id="ds-{{n}}" bindtap="i_sedate">开始日:{{c[0]}}　　</view>
-      <view style='display: inline-block;text-align: right;' id="de-{{n}}" bindtap="i_sedate">截止日:{{c[1]}}</view>
-    </picker>
   </view>
 </template>
 
@@ -493,37 +161,8 @@
   </view>
 </template>
 
-<template name="i_sCargo">
-  <view class="weui-cell">
-    <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{ad[c ? c : cargoObject[provalue[0]][provalue[1]] ]}} </view>
-    <view hidden="true"><input name="{{gname}}" value="{{c ? c : mD[provalue[0]][provalue[1]]}}" /></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="i_sCargo" type="search" size="32"/>
-  </view>
-  <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{provalue}}" bindchange="i_sCargo">
-      <picker-view-column>
-          <view wx:for="{{proSelCargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.product}}</view>
-      </picker-view-column>
-      <picker-view-column>
-          <view wx:for="{{proSelCargo[provalue[0]].cargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{cargoObject[item]}}</view>
-      </picker-view-column>
-    </picker-view>
-  </view>
-</template>
-
 <template name="s_MS">
   <view hidden="true">{{c}}</view>
-</template>
-
-<template name="i_MS">
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  <navigator url="/util/mapsunit/mapsunit?reqNumber={{n}}">
-    <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">{{p}}:</view>
-      <view class="weui-cell__ft">{{e}}</view>
-    </view>
-  </navigator>
 </template>
 
 <template name="s_table">
@@ -541,14 +180,15 @@
   </view>
 </template>
 
-<template name="i_table">
-  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-  <view class="weui-cell weui-cell_input">
-    <navigator url="/util/mapsunit/mapsunit?reqName={{gname}}">
-      <view class="weui-cell__hd">{{p}}:</view>
-      <view class="weui-cell__ft">{{e}}</view>
+<template name="showgrids">
+<view class="weui-grids">
+  <block wx:for="{{grids}}" wx:key="{{index}}">
+    <navigator url="{{item.tourl}}" class="weui-grid" hover-class="weui-grid_active">
+      <image class="weui-grid__icon" src="{{item.mIcon}}" />
+      <view class="weui-grid__label">{{item.mName}}</view>
     </navigator>
-  </view>
+  </block>
+</view>
 </template>
 
 <template name="tabsCk">
